ChangeLog for Simple Python Fixed-Point Module

06May17	- *** spfpm-1.2 released

05May17	- removed need to have same FXfamily object when combining FXnums
	- added '__slots__' specifier to FXnum fields

15Jul14	- *** spfpm-1.1 released

15Jul14	- added left/right shift operators
	improved initialization of FXnum objects from output of repr()

14Jul14	- replaced various getter methods in FXfamily with properties
	added improved expressions for computing exp(1) and log(2)
	updated graph-based demos to use Matplotlib in place of Gnuplot

19May09	- *** spfpm-1.0.1 released

20Feb09	- patched FXnum constructor to check for overflows

31Jan09	- *** spfpm-1.0 released

31Jan09	- improved accuracy of pi,log(2) etc used in trig,exp functions

06Dec08	- ported to Python-3.0

11Apr08	- *** spfpm-0.6 released

09Apr08	- added validator in FXfamily to allow limited range of integer-part

07Oct07	- added basic FLOPS calculator to demo.py

27May07	- *** spfpm-0.5 released

26May07	- minor adjustments to ensure test-cases run under Python-2.2
	added unit-test for repr()

21May07	- neatened module importing in unit-test routines

23Apr07	- removed use of 'isinstance' from FXfamily & (almost all of) FXnum

11Feb07	- added improved asin()/acos() methods based on 1-cos2t transformations

04Feb07	- removed (deprecated) FPnum wrappers

03Feb07	- *** spfpm-0.4 released

03Feb07	- patched rounding on cast to int/long to match behaviour of float-casts
	added unit-test for sqrt() method
	expanded set of exception classes, including domain-error etc
	added unit-test for asin() & acos() methods

02Feb07	- added demo/test/clean Makefile targets

01Feb07	- added setup.py distutils-script

31Jan07	- added basic asin() & acos() methods

30Jan07	- replaced _rawsincos() method with dual-mode _rawQsine() method
	added sin() & cos() methods

29Jan07	- patched spurious family-conversion in __neg__() operator

27Jan07	- extended discusions + examples in documentation